Cambio en la vista

--- a/B76711_B72933_ESPIC/Views/Medico/contrasena.cshtml
+++ b/B76711_B72933_ESPIC/Views/Medico/contrasena.cshtml
@@ -20,7 +20,7 @@
                     <input type="password" class="form-control" asp-for="contrasenna" placeholder="Nueva Contraseña" value="" required />
                 </div>
                 <div class="form-group">
-                    <input type="submit" class="btnSubmit" value="Cambiar Contraseña" />
+                    <input type="submit" class="btnSubmit" id="btn1" value="Cambiar Contraseña" />
                 </div>
             </form>
         </div>
@@ -31,12 +31,27 @@
                 ademas puedes controlar todo el registro de las vacunas que se les aplicado a cada uno de tus
                 paciente, controlar sus enfermedad o alergias que padecen, ofreciendo un control y brindando
                 sus medicamentos.<br><br>
-
-                @*<img id="img" alt="producto" src="public/img/3.jpg">*@
-
             </span>
-
+            <div class="logo">
+                <center>
+                    <img id="img1" alt="producto" src="~/img/ESPIC1.png" width="140" height="140">
+                </center>
+            </div>
         </div>
 
     </div>
 </div>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
