--- a/B76711_B72933_ESPIC/Views/Medico/login.cshtml
+++ b/B76711_B72933_ESPIC/Views/Medico/login.cshtml
@@ -30,16 +30,19 @@
         </div>
         <div class="col-md-6 login-form-2">
 
+
             <span>
                 Puedes monitoriar a tus pacientes por ejemplo, con su historial de citas que a tenido o su proxima cita
                 ademas puedes controlar todo el registro de las vacunas que se les aplicado a cada uno de tus
                 paciente, controlar sus enfermedad o alergias que padecen, ofreciendo un control y brindando
                 sus medicamentos.<br><br>
 
-                @*<img id="img" alt="producto" src="public/img/3.jpg">*@
-
             </span>
-
+            <div class="logo">
+                <center>
+                    <img id="img" alt="producto" src="~/img/ESPIC1.png" width="140" height="140">
+                </center>
+            </div>
         </div>
 
     </div>
