--- a/B76711_B72933_ESPIC/Views/Shared/_LayoutCitas.cshtml
+++ b/B76711_B72933_ESPIC/Views/Shared/_LayoutCitas.cshtml
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - B76711_B72933_ESPIC</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstraps.min.css" />
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrapssss.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrapsss.css" />
     <link rel="stylesheet" href="~/css/sites.css" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-dark bg-info">
-            <a class="navbar-brand" asp-controller="Medico" asp-action="Index">
+            <div id="headlogo" class="col-5 col-sm-3 col-md-3"><a asp-controller="Medico" asp-action="Index"> <img src="~/img/ESPIC_22.png" width="140" height="140"> </a></div>
 
-            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbarXs">
                 <span class="navbar-toggler-icon"></span>
             </button>
