--- a/B76711_B72933_ESPIC/Views/Citas/Registrar.cshtml
+++ b/B76711_B72933_ESPIC/Views/Citas/Registrar.cshtml
@@ -4,7 +4,9 @@
     ViewData["Title"] = "Registrar";
     Layout = "_LayoutCitas";
 }
+
 <div class="container">
+    
     <div class="row justify-content-center align-items-center">
         <div class="col-md-8 p-5">
             <h1>Registrar Citas</h1>
@@ -47,7 +49,7 @@
                     <span asp-validation-for="fecha" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="time" class="form-control input-md" asp-for="hora" />
+                    <input type="time" class="form-control input-md" asp-for="hora" required />
                     <span asp-validation-for="hora" class="text-danger"></span>
                 </div>
 
@@ -55,9 +57,6 @@
                     <input type="submit" value="Registrar Cita" class="btn btn-primary" />
                 </div>
             </form>
-            <div>
-                <a asp-action="Index">Regresar</a>
-            </div>
         </div>
     </div>
 </div>
