Se corregi ortografía

--- a/B76711_B72933_ESPIC/Views/Citas/Index.cshtml
+++ b/B76711_B72933_ESPIC/Views/Citas/Index.cshtml
@@ -20,8 +20,8 @@
                 <div class="section-title">
                     <h2>Citas Médicas</h2>
                     <p>
-                        Monitorial a tus pacientes, con sus historial de cistas que a tenido o
-                        su proxima cita, historial clinico desde temprana edad.
+                        Monitoriar a tus pacientes, con sus historial de citas que a tenido o
+                        su próxima cita, historial clinico desde temprana edad.
                     </p>
                 </div>
             </div>
@@ -33,7 +33,7 @@
                         <img src="~/img/cita.png" width="49" height="49" />
                     </div>
                     <div class="feature-content">
-                        <h5>Duracion de cada Cita</h5>
+                        <h5>Duración de cada Cita</h5>
                         <p>
                             Cada consulta debe tener una duración mínima de 30 minutos.
                         </p>
