--- a/B76711_B72933_ESPIC/Views/Vacunas/Registrar.cshtml
+++ b/B76711_B72933_ESPIC/Views/Vacunas/Registrar.cshtml
@@ -24,8 +24,8 @@
                 <div class="form-group">
                     <select asp-for="nombre" class="form-control" placeholder="Vacuna">
                         <option value="Tdap">Tdap(Tétanos)</option>
-                        <option value="MMRV">MMRV(Sarampio,papera)</option>
-                        <option value="BioNTech, Pfizer">BioNTech, Pfize </option>
+                        <option value="MMRV">MMRV(Sarampion,papera)</option>
+                        <option value="BioNTech, Pfizer">BioNTech, Pfizer </option>
                         <option value="Oxford, AstraZeneca">Oxford, AstraZeneca</option>
                         <option value="Influenza">Influenza</option>
 
