--- a/B76711_B72933_ESPIC/Views/Medico/login.cshtml
+++ b/B76711_B72933_ESPIC/Views/Medico/login.cshtml
@@ -24,7 +24,7 @@
                 </div>
 
                 <div class="form-group">
-                    <a id="login1" class="btnForgetPwd" href="Medico/contrasena">Olvido su Contraseña?</a>
+                    <a id="login1" class="btnForgetPwd" href="Medico/contrasena">¿Olvido su Contraseña?</a>
                 </div>
                 @if (ViewData["Error"] != null)
                 {
