--- a/B76711_B72933_ESPIC/Views/Shared/_LayoutVacunas.cshtml
+++ b/B76711_B72933_ESPIC/Views/Shared/_LayoutVacunas.cshtml
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-dark bg-info">
-            <div id="headlogo" class="col-5 col-sm-3 col-md-3"><a asp-controller="Medico" asp-action="Index"> <img src="~/img/ESPIC_22.png" width="140" height="140"> </a></div>
+            <div id="headlogo" class="col-5 col-sm-3 col-md-3"><a asp-controller="Medico" asp-action="Index"> <img src="~/img/ESPIC_Nuevo.png"> </a></div>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbarXs">
                 <span class="navbar-toggler-icon"></span>
